// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentItemEditor for an invalid item renders all errors messages 1`] = `
<div role="list" class="v-list theme--light" data-test="questionErrors">
  <div role="listitem">
    <div class="v-list__tile theme--light"><span class="red--text font-weight-medium">Question cannot be blank</span></div>
  </div>
</div>
`;

exports[`AssessmentItemEditor for an invalid item renders all errors messages 2`] = `
<div role="list" class="v-list theme--light" data-test="answersErrors">
  <div role="listitem">
    <div class="v-list__tile theme--light"><span class="red--text font-weight-medium">Choose a correct answer</span></div>
  </div>
</div>
`;

exports[`AssessmentItemEditor renders 1`] = `
<div>
  <div class="layout">
    <div class="flex xs7 lg5">
      <div role="combobox" class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-select__slot"><label aria-hidden="true" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Question type</label>
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">Single selection</div><input aria-label="Question type" data-test="kindSelect" readonly="readonly" type="text" autocomplete="on" aria-readonly="false">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon v-icon material-icons theme--light v-icon--is-component theme--light notranslate">arrow_drop_down</i></div>
              </div>
            </div>
            <div class="v-menu"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <div class="v-messages__wrapper"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="layout">
    <div class="flex">
      <!---->
      <div class="grey--text text--darken-2 mb-1">
        Question
      </div>
      <div data-test="questionText" class="pl-2 pr-2 pt-3 pb-3 question-text" name="fade">
        <div class="layout align-center justify-space-between">
          <div>
            <div>
              Exercise 2 - Question 2
            </div>
          </div> <i aria-hidden="true" class="v-icon mr-2 material-icons theme--light grey--text text--darken-1">edit</i>
        </div>
      </div>
    </div>
  </div>
  <div class="layout mt-4">
    <div class="flex">
      <!---->
      <div>
        <div class="grey--text text--darken-1 mb-3">
          Answers
        </div>
        <!---->
        <div class="card-border-light">
          <div class="v-card v-card--flat v-sheet theme--light answer editable closed correct" data-test="answer">
            <div class="indicator correct"></div>
            <div class="v-card__text pb-0">
              <div class="layout align-top">
                <div class="flex xs1">
                  <div class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--column theme--light">
                    <div class="v-input__control">
                      <div class="v-input__slot" style="height: auto;">
                        <div role="radiogroup" class="v-input--radio-group__input">
                          <div class="v-radio theme--light accent--text">
                            <div class="v-input--selection-controls__input"><input aria-checked="true" role="radio" type="radio" name="v-radio-35" value="0" data-test="answerRadio">
                              <div class="v-input--selection-controls__ripple accent--text"></div><i aria-hidden="true" class="v-icon v-icon material-icons theme--light v-icon--is-component theme--light notranslate accent--text">radio_button_checked</i>
                            </div><label aria-hidden="true" class="v-label theme--light" style="left: 0px; position: relative;"></label>
                          </div>
                        </div>
                      </div>
                      <div class="v-messages theme--light"><span name="message-transition" tag="div" class="v-messages__wrapper"></span></div>
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="flex xs7">
                  <div>
                    <div>
                      Mayonnaise (I mean you can, but...)
                    </div>
                  </div>
                </div>
                <div class="spacer"></div>
                <div class="flex">
                  <div class="layout justify-end toolbar" data-test="toolbar">
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_up</i></div></button></span></div>
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_down</i></div></button></span></div>
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div></button></span></div>
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="card-border-light">
          <div class="v-card v-card--flat v-sheet theme--light answer editable closed wrong" data-test="answer">
            <div class="indicator wrong"></div>
            <div class="v-card__text pb-0">
              <div class="layout align-top">
                <div class="flex xs1">
                  <div class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--column theme--light">
                    <div class="v-input__control">
                      <div class="v-input__slot" style="height: auto;">
                        <div role="radiogroup" class="v-input--radio-group__input">
                          <div class="v-radio theme--light">
                            <div class="v-input--selection-controls__input"><input aria-checked="false" role="radio" type="radio" name="v-radio-57" value="1" data-test="answerRadio">
                              <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon v-icon material-icons theme--light v-icon--is-component theme--light notranslate">radio_button_unchecked</i>
                            </div><label aria-hidden="true" class="v-label theme--light" style="left: 0px; position: relative;"></label>
                          </div>
                        </div>
                      </div>
                      <div class="v-messages theme--light"><span name="message-transition" tag="div" class="v-messages__wrapper"></span></div>
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="flex xs7">
                  <div>
                    <div>
                      Peanut butter
                    </div>
                  </div>
                </div>
                <div class="spacer"></div>
                <div class="flex">
                  <div class="layout justify-end toolbar" data-test="toolbar">
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_up</i></div></button></span></div>
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_down</i></div></button></span></div>
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div></button></span></div>
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div> <button type="button" class="mt-3 ml-0 v-btn v-btn--flat theme--light primary--text" data-test="newAnswerBtn">
          <div class="v-btn__content">
            New answer
          </div>
        </button>
      </div>
      <div class="mt-4">
        <div class="grey--text text--darken-1 mb-3">
          Hints
        </div>
        <!---->
        <div data-test="hint" class="card-border-light">
          <div class="v-card v-card--flat v-sheet theme--light hint closed">
            <div class="v-card__text pt-0 pb-0">
              <div class="layout align-top">
                <div class="flex xs1" style="margin-top: 10px;">
                  1
                </div>
                <div class="flex xs7">
                  <div name="fade">
                    <div>
                      It's not healthy
                    </div>
                  </div>
                </div>
                <div class="spacer"></div>
                <div class="flex">
                  <div class="layout justify-end toolbar">
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_up</i></div></button></span></div>
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_down</i></div></button></span></div>
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div></button></span></div>
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div data-test="hint" class="card-border-light">
          <div class="v-card v-card--flat v-sheet theme--light hint closed">
            <div class="v-card__text pt-0 pb-0">
              <div class="layout align-top">
                <div class="flex xs1" style="margin-top: 10px;">
                  2
                </div>
                <div class="flex xs7">
                  <div name="fade">
                    <div>
                      Tasty!
                    </div>
                  </div>
                </div>
                <div class="spacer"></div>
                <div class="flex">
                  <div class="layout justify-end toolbar">
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_up</i></div></button></span></div>
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_down</i></div></button></span></div>
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM"><div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div></button></span></div>
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div> <button type="button" class="mt-3 ml-0 v-btn v-btn--flat theme--light primary--text" data-test="newHintBtn">
          <div class="v-btn__content">
            New hint
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
